# dca-func

./: .gitignore  .gitmodules  README.md  bitget  deploy.sh  function_app.py  pyproject.toml  requirements.txt  update-bitget-api.sh  update-requiremets-txt.sh
.github/workflows/: azure-functions-app-python.yml
dca_func/: market_data.py  tools.py
tests/: test_function_app.py  test_market_api.py
