[tool.poetry]
name = "dca-func"
version = "0.1.0"
description = ""
authors = ["r0nny8000 <r0nny8000@bea2b.de>"]
readme = "README.md"
packages = [{include = "dca_func"}]

[tool.poetry.dependencies]
python = "3.10.*"
azure-functions = "^1.15.0"
requests = "^2.31.0"
websockets = "^12.0"
pycryptodome = "^3.19.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
