[tool.poetry]
name = "dca-func"
version = "0.1.0"
description = ""
authors = ["r0nny8000 <r0nny8000@bea2b.de>"]
readme = "README.md"
packages = [{include = "dca_func"}]

[tool.poetry.dependencies]
python = "3.10.*"
azure-functions = "^1.15.0"
requests = "^2.31.0"
websockets = "^12.0"
pycryptodome = "^3.19.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pytest = "^7.4.3"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)8s %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
